--- a/HTML/assets/less/textbook.less
+++ b/HTML/assets/less/textbook.less
@@ -6,8 +6,9 @@
 
 .fail_element {
   position: absolute;
+  margin: auto;
   opacity: 0;
-  top: 100px;
+  top: 70px;
   text-align: center;
   width: 50%;
   left: 25%;
@@ -27,7 +28,7 @@
     .list_header {
       height: 38px;
       line-height: 38px;
-      background: darken(@body-bg, 10%);
+      //background: darken(@body-bg, 10%);
       text-align: right;
       color: #59514c;
       -webkit-border-radius: 3px;
@@ -54,6 +55,7 @@
       text-align: left;
       width: auto;
       border-left: 0 none;
+      padding: 0 2% 0 0;
     }
     .list_header .meta {
       &.name {
@@ -106,7 +108,8 @@
     .mix {
       display: none;
       opacity: 0;
-      padding: 18px 0 14px;
+      // padding: 18px 0 14px;
+      padding: 0;
       border-bottom: 1px solid lighten(@color-grey, 25%);
       text-align: right;
       height: 127px;
@@ -116,7 +119,7 @@
       font-weight: 300;
       .meta {
         * {
-          line-height: 1;
+          line-height: 1.2;
         }
         p, ul {
           display: inline-block;
@@ -138,16 +141,12 @@
     .titles {
       display: inline-block;
       vertical-align: middle;
-      h2 {
-        font-weight: 700;
-        font-size: 17px;
-        text-transform: uppercase;
-        letter-spacing: 2px;
-        margin-bottom: 3px;
-        line-height: 1.2 !important;
+      h3 {
+        margin-bottom: 5px;
+        margin-top: 15px;
       }
       p {
-        text-indent: -2px;
+        // text-indent: -2px;
       }
     }
   }
@@ -214,13 +213,21 @@
 
 #textbooks.list{
 	.mix{
-		background-color: @preview-grey;
+		background-color: lighten(@preview-grey, 3%);
 		cursor: pointer;
-		height: auto;
+		height: 120px;
+    margin-bottom: 10px;
+    border-bottom: none;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.2);
+    .ease;
+    &:hover{
+      background-color: @preview-grey;
+      .ease;
+    }
 	}
 	.mix:nth-child(2n+1){
 		//background-color: @color-white;
-		background-color: lighten(@preview-grey, 3%);
+		//background-color: lighten(@preview-grey, 3%);
 	}
 	.list_header .meta{
 		margin-top: 0;
@@ -246,17 +253,23 @@
 		}
 	.img_wrapper{
 		//width: 125px;
-		width: 40%;
-		float: left;
-		height: 65px;
+		width: 20%;
+		//float: left;
+		height: 100%;
 		margin-right: 10px;
+    img{
+      //position: static;
+      height: auto;
+      width: auto;
+      left: -40%;
+    }
 	}
 	.titles{
 		vertical-align: top;
-		width: 54%;
-		float: left;
+		width: 70%;
+		//float: left;
 		word-break: break-word;
-		h2{
+		h3{
 			letter-spacing: 1px;
 		}
 	}
