--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/list-item.html
@@ -3,8 +3,8 @@
       {{&thumbnail}}
     </div>
     <div class="titles">
-      <h2><a class="textbook_titles" data-id="{{term_id}}" href="{{url}}">{{name}}</a></h2>
-      <p><em>{{author}}</em></p>
+      <h3 class="normal"><a class="textbook_titles" data-id="{{term_id}}" href="{{url}}">{{name}}</a></h3>
+      <p class="small-text">{{author}}</p>
     </div>
 </div>
 
