--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -12,7 +12,6 @@
                 {{#.}}
                     <li><a href="#teachers/take-class/{{class_id}}/{{id}}"><div class="classesWrap">{{division}}</div></a></li>
                 {{/.}}
-            <div class="clearfix"></div>
             {{/divisions}}
         </ul>
     </div>
@@ -24,10 +23,10 @@
             {{/class_ids}}
         </ul>
     </div>
-    <div class="tab-pane" id="progress">
+    <div class="tab-pane animated fadeInUp" id="progress">
       <div class="row">
         <div class="col-md-12">
-          <h3>Coming Soon...</h3>
+            <h1 class="text-center muted m-b-20">Coming <span class="bold">Soon</span> ...</h1>
         </div>
       </div>
     </div>
