content pieces status, textbooks n chapter display

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-pieces/list-content-pieces/templates/content-pieces-list-tpl.html
@@ -32,10 +32,13 @@
             <table class="table table-striped" id="content-pieces-table" >
                 <thead>
                 <tr>
-                    <th style="width:60%">Excerpt</th>
+                    <th style="width:30%">Excerpt</th>
                     <th>Author</th>
+                    <th>Textbook</th>
+                    <th>Chapter</th>
                     <th>Last Modified</th>
-                    <th></th>
+                    <th>Status</th>
+                    <th>Actions</th>
                 </tr>
                 </thead>
 
