fixed header on take class js added

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -36,7 +36,7 @@
 	//width: 59%;
 	margin-left: 240px;
 	margin-right: 240px;
-	margin-bottom: 100px;
+	margin-bottom: 50px;
 	overflow-x: auto;
 }
 
@@ -65,7 +65,7 @@
 	max-width: 760px;
 	margin: 0 auto;
 	padding: 15px 10px;
-	margin-top: 30px;
+	// margin-top: 30px;
 }
 
 #toolbox{
@@ -599,8 +599,8 @@
 	}
 }
 
-.image, .video{
-	.image-placeholder, .video-placeholder{
+.image, .video, .audio{
+	.image-placeholder, .video-placeholder, .audio-placeholder{
 		padding: 2% 0;
 		text-align: center;
 		//border: 3px dashed @preview-grey;
