--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -163,7 +163,7 @@
 #site-page-content-region {
   margin-left: 240px;
   margin-right: 240px;
-  margin-bottom: 100px;
+  margin-bottom: 50px;
   overflow-x: auto;
 }
 #myCanvas {
@@ -185,7 +185,6 @@
   max-width: 760px;
   margin: 0 auto;
   padding: 15px 10px;
-  margin-top: 30px;
 }
 #toolbox {
   width: 220px;
@@ -770,8 +769,13 @@
 }
 .image .image-placeholder,
 .video .image-placeholder,
+.audio .image-placeholder,
 .image .video-placeholder,
-.video .video-placeholder {
+.video .video-placeholder,
+.audio .video-placeholder,
+.image .audio-placeholder,
+.video .audio-placeholder,
+.audio .audio-placeholder {
   padding: 2% 0;
   text-align: center;
   cursor: pointer;
@@ -781,8 +785,13 @@
 }
 .image .image-placeholder .bicon,
 .video .image-placeholder .bicon,
+.audio .image-placeholder .bicon,
 .image .video-placeholder .bicon,
-.video .video-placeholder .bicon {
+.video .video-placeholder .bicon,
+.audio .video-placeholder .bicon,
+.image .audio-placeholder .bicon,
+.video .audio-placeholder .bicon,
+.audio .audio-placeholder .bicon {
   font-size: 40px;
   display: block;
 }
