--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -6,7 +6,7 @@
 {{/isTraining}}
 <div class="moduleInfo m-b-20">
 	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
-            <div class="modTime">
+            <div class="modTime pause">
                 <a id="back-to-module" class="btn btn-small btn-block btn-white m-t-10"><h4 class="semi-bold text-info no-margin"><span class="fa fa-pause"></span> {{name}}</h4></a>
                 
                 <!-- {{&showPauseButton}} -->
@@ -35,8 +35,8 @@
                     </div>
                 {{/isTraining}}
             </div>
-            <div class="modTime">
-                <button type="button" id="question-done"  class="btn  btn-success m-t-10 pull-right">
+            <div class="modTime next">
+                <button type="button" id="question-done"  class="btn btn-block btn-success m-t-10">
                     <i class="fa fa-forward"></i> Next
                 </button>
             </div>
