audio player color change, animated effect change

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -471,3 +471,9 @@ select{
 		min-height: 0;
 	}
 }
+
+/*Panzer Audio Player*/
+.panzer-light .player{
+	background: @preview-grey;
+	border: none;
+}
