--- a/wp-content/themes/walnut/walnut/dev/js/apps/admin-content-modules/templates/outer-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/admin-content-modules/templates/outer-template.html
@@ -1,4 +1,4 @@
-<div class="tiles white grid simple vertical blue animated slideInRight">
+<div class="tiles white grid simple vertical blue animated fadeIn">
     <div class="grid-title no-border">
         <h4 class="">Textbook <span class="semi-bold">{{showTextbookName}}</span></h4>
 
