--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-modules/view-single-module/module-description/templates/module-description.html
@@ -10,7 +10,7 @@
             It is designed to help you train for the class</span></h4>
 </div>
 {{/isTraining}}
-<div class='tiles white grid simple vertical green animated slideInRight'>
+<div class='tiles white grid simple vertical green animated fadeIn'>
     <div class="grid-title no-border">
         <h4 class="">{{name}}</h4>
 
