fib preview marks fixed, parse for edit page

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
@@ -39,5 +39,9 @@
             <label class="form-label bold small-text muted no-margin">Sub-Section</label>
             {{getSubSectionsNames}}
         </div>
+        <div class="b-grey b-b m-b-10 p-b-5" id="total-marks">
+            <label class="form-label bold small-text muted no-margin">Marks</label>
+            <span></span>
+        </div>
     </div>
 </div>
