--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/chorus-options/templates/chorus-options-template.html
@@ -1,8 +1,4 @@
-<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10">
-  <button type="button" id="question-done" class="btn btn-success btn-xs btn-sm">
-    <i class="fa fa-forward"></i> Next
-  </button>
-</div>
+<h3 id="select-an-item" class="no-margin semi-bold muted">Select an option</h3>
 
 <div class="clearfix"></div>
 <div class="row students m-l-0 m-r-0 m-t-20">
