--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -63,7 +63,8 @@
                     <label class="form-label">Status</label>
                     <select required name="post_status" id="status" class="form-control select2" >
                         <option value="pending">Under Review</option>
-                        <option value="publish">Published</option>
+                        <option value="publish">Publish</option>
+                        <option value="archive">Archive</option>
                     </select>
                 </div>
                 <div class="col-sm-4">
