timer changes, mcq changes

--- a/HTML/assets/less/mcq.less
+++ b/HTML/assets/less/mcq.less
@@ -24,12 +24,12 @@
 	}
 }
 .mcq-option {
-	width: 100%;
+	// width: 100%;
 	//margin-right: 5px;
-	//float: left;
+	float: left;
 	//word-wrap: break-word;
 	border: 2px solid transparent;
-	padding: 5px;
+	// padding: 5px;
 	margin-bottom: 2px;
 	//position: relative;
 	min-height: 40px;
@@ -94,6 +94,9 @@
 		padding-top: 6px;
 		padding-right: 2px;
 		font-size: 16px;
+	}
+	& + .element-wrapper{
+		overflow: hidden;
 	}
 }
 
