--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -24,6 +24,18 @@
 	}
 }
 
+.time_circles{
+	position: static;
+	canvas{
+		margin-bottom: -80px;
+	}
+	& > div{
+		position: static;
+		display: inline-block;
+		margin-bottom: 50px;
+	}
+}
+
 .modInfo, .qstnInfo{
 	cursor: pointer;
 }
@@ -38,6 +50,10 @@
 
 #content-board{
 	margin-top: 15px;
+	margin-left: 220px;
+	margin-right: 220px;
+	margin-bottom: 50px;
+	overflow-x: auto;
 	.element-wrapper{
 		border: none;
 		padding: 0 7px;
@@ -46,11 +62,13 @@
 }
 
 .contentTime{
-	float: left;
+	// float: left;
+	left: 5px;
 }
 
 .contentInfo{
-	float: right;
+	// float: right;
+	right: 5px;
 	padding: 20px 20px 10px;
 }
 
@@ -60,10 +78,15 @@
 	background: @preview-grey;
 	border: 1px solid lighten(@dash-grey, 10%);
 	box-shadow: darken(@preview-grey, 10%) 0 0 0 3px inset;
-	margin: 0 1.5%;
+	// margin: 0 1.5%;
+	position: absolute;
 }
 
 @media (min-width: 1020px) and (max-width:1295px){
+	#content-board{
+		margin: 0;
+		margin-top: 15px;
+	}
 	#myCanvas{
 		margin: 0;
 		margin-left: auto;
@@ -72,14 +95,15 @@
 		float: left;
 		margin-left: 2px;
 	}
-	.contentTime{
-		margin-bottom: 8px;
-	}
 	.contentTime, .contentInfo{
 		// margin: 0;
 		// left: 5px;
-		// position: absolute;
+		position: static;
 		float: none;
+		margin: 0 1.5%;
+	}
+	.contentTime{
+		margin-bottom: 8px;
 	}
 	.contentInfo{
 		// top: 175px;
@@ -115,7 +139,7 @@
 	top: 0;
 	left: 0;
 	width: 100%;
-	z-index: 2;
+	z-index: 5;
 	&.condensed{
 		.moduleInfo > div{
 			padding: 0;
@@ -142,7 +166,7 @@
 }
 
 #question-details-region{
-	margin-top: 90px;
+	margin-top: 115px;
 }
 
 
