--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -50,7 +50,7 @@ h3.time{
 	// border: 1px solid lighten(@dash-grey, 10%);
 	// box-shadow: darken(@preview-grey, 10%) 0 0 0 3px inset;
 	margin: 0 5px;
-	position: relative;
+	// position: relative;
 	h4{
 		span{
 			display: block;
