--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -30,7 +30,7 @@
                     <div class="modProgress h-center">
                         <p class="bold small-text muted">Progress</p>
                         <div class="progress progress-large w100 m-b-0">
-                            <div data-percentage="{{getProgressPercentage}}%" style="width: {{getProgressPercentage}}%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100">{{getProgressData}}</div>
+                            <div data-percentage="{{getProgressPercentage}}%" style="width: {{getProgressPercentage}}%;" class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="{{getProgressPercentage}}" aria-valuemin="0" aria-valuemax="100">{{getProgressData}}</div>
                         </div>
                     </div>
                 {{/isTraining}}
