--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -15,6 +15,11 @@ h3.modName{
 	width: 100%;
 	.progress{
 		width: 100%;
+		.progress-bar[aria-valuenow="NaN"], .progress-bar[aria-valuenow="0"] {
+			min-width: 30px;
+			color: @3-grey;
+			background-color: transparent;
+		}
 	}
 }
 
