teachers dashboard active/inactive link fixed

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -1,5 +1,5 @@
 <div id="teacherOptns">
-    <h3 class=""><a href="#takeClass">Take a Class</a></h3>
+    <h3><a href="#takeClass" class="active">Take a Class</a></h3>
     <h3 class=""><a href="#training">Start Traning</a></h3>
     <h3 class=""><a href="#progress">Class Progress</a></h3>
 </div>
