--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/module-description/templates/module-description-template.html
@@ -1,6 +1,6 @@
 {{#isTraining}}
-    <div class="well text-center">
-        <h4><span class="bold">This is a practise mode.
+    <div class="well text-center m-b-0 p-b-5 p-t-5">
+        <h4><span class="bold">This is practice mode.
                 It is designed to help you train for the class</span></h4>
     </div>
 {{/isTraining}}
