--- a/HTML/assets/less/teacher.less
+++ b/HTML/assets/less/teacher.less
@@ -7,7 +7,7 @@
 
 #teacherOptns{
 	text-align: center;
-	margin-bottom: 30px;
+	margin-top: 30px;
 	h3{
 		display: inline-block;
 		// border-right: 1px solid lighten(@dash-grey, 10%);
