timer changes, textbook list clickable area

--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -26,13 +26,15 @@
 
 .time_circles{
 	position: static;
+	display: table-caption;
+	padding-bottom: 50px;
 	canvas{
-		margin-bottom: -80px;
+		margin-bottom: -75px;
+		display: table-cell;
 	}
 	& > div{
 		position: static;
-		display: inline-block;
-		margin-bottom: 50px;
+		display: table-cell;
 	}
 }
 
