--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1300,14 +1300,16 @@ p.mcq-option-text {
 }
 .time_circles {
   position: static;
+  display: table-caption;
+  padding-bottom: 50px;
 }
 .time_circles canvas {
-  margin-bottom: -80px;
+  margin-bottom: -75px;
+  display: table-cell;
 }
 .time_circles > div {
   position: static;
-  display: inline-block;
-  margin-bottom: 50px;
+  display: table-cell;
 }
 .modInfo,
 .qstnInfo {
