--- a/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/take-module-item/chorus-options/templates/chorus-options-template.html
@@ -1,4 +1,4 @@
-<h3 id="select-an-item" class="no-margin semi-bold muted">Select an option</h3>
+<h3 id="select-an-item" class="no-margin semi-bold text-center muted">Select an option</h3>
 
 <div class="clearfix"></div>
 <div class="row students m-l-0 m-r-0 m-t-20">
