--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -26,10 +26,10 @@
 
 .time_circles{
 	position: static;
-	display: table-caption;
-	padding-bottom: 50px;
+	display: table-cell;
+	height: 120px;
 	canvas{
-		margin-bottom: -75px;
+		margin-bottom: -80px;
 		display: table-cell;
 	}
 	& > div{
