textbook filters issue

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks-list.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/templates/textbooks-list.html
@@ -6,7 +6,7 @@
 				<ul class="dropdown-menu">
 					<li class="active" data-filter="all" data-dimension="region"><a href="#">All</a></li>
 					{{#classes}}
-					<li class="" data-dimension="region" data-filter="{{.}}"><a href="javascript://">{{.}}</a></li>
+					<li class="" data-dimension="region" data-filter="{{slug}}"><a href="javascript://">{{label}}</a></li>
 					{{/classes}}
 				</ul>
 			</div>
