--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -241,6 +241,10 @@ textarea.error, .select2-choice.error {
 	border:1px solid @color-danger !important;
 }
 
+.page-container, .page-content{
+	position: static;
+}
+
 .page-content.condensed{
 	overflow: visible;
 }
