--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -25,17 +25,17 @@
 }
 
 .time_circles{
-	position: static;
-	display: table-cell;
-	height: 120px;
-	canvas{
-		margin-bottom: -80px;
-		display: table-cell;
-	}
-	& > div{
-		position: static;
-		display: table-cell;
-	}
+	// position: static;
+	// display: table-cell;
+	// height: 120px;
+	// canvas{
+	// 	margin-bottom: -80px;
+	// 	display: table-cell;
+	// }
+	// & > div{
+	// 	position: static;
+	// 	display: table-cell;
+	// }
 }
 
 .modInfo, .qstnInfo{
