--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/options-bar/templates/options-bar.html
@@ -1,10 +1,12 @@
-<!--<ul class="nav nav-tabs" id="subProps">
-    <li class="active"><a href="#settings">Settings</a></li>
-    <li class=""><a href="#meta">Meta</a></li>
-</ul>-->
+{{#isStudentQuestion}}
+<ul class="nav nav-tabs" id="subProps">
+    <li class="active" id="settings-tab"><a>Settings</a></li>
+    <li class="" id="more-tab"><a>More</a></li>
+</ul>
+{{/isStudentQuestion}}
 <form name="contentpiece-settings">
     <div class="tab-content ">
-        <div class="tab-pane active" id="settings">
+        <div class="tab-pane active" id="settings-tab-pane">
             <div class="row m-b-15">
                 <div class="col-sm-4">
                     <label class="form-label">Textbook</label>
@@ -59,6 +61,17 @@
                         <option value="multiple_eval">Multiple Evaluation</option>
                     </select>
                 </div>
+                {{#isStudentQuestion}}
+                <div class="col-sm-4" id="difficulty_level_column">
+                    <label class="form-label">Difficulty Level</label>
+                    <select required name="difficulty_level" id="difficulty_level" class="form-control select2" >
+                        <option value="">--select Difficulty Level--</option>
+                        <option value="l1">Level 1</option>
+                        <option value="l2">level 2</option>
+                        <option value="l3">Level 3</option>
+                    </select>
+                </div>
+                {{/isStudentQuestion}}
                 <div class="col-sm-4">
                     <label class="form-label">Status</label>
                     <select required name="post_status" id="status" class="form-control select2" >
@@ -103,6 +116,7 @@
                 <!--</div>-->
             <!--{{/studentQuestion}}-->
         </div>
+        <div class="tab-pane" id="more-tab-pane"></div>
     </div>
 </form>
 
