new timer css, body height change for scroll fix on mobile

--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -38,6 +38,28 @@
 	// }
 }
 
+.countdown-row {
+	clear: both;
+	width: 100%;
+	padding: 0px 2px;
+	text-align: center;
+	.countdown-section {
+		width: 48%;
+	}
+}
+.countdown-section {
+	display: block;
+	float: left;
+	font-size: 75%;
+	text-align: center;
+}
+.countdown-amount {
+    font-size: 200%;
+}
+.countdown-period {
+    display: block;
+}
+
 .modInfo, .qstnInfo{
 	cursor: pointer;
 }
