--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
@@ -17,7 +17,7 @@
 				</h3>
 				<h5>Chapters</h5>
 				<h3 class="text-success semi-bold">
-					{{count}}
+					{{questions_count}}
 				</h3>
 				<h5>Questions</h5>
 			</div>
