--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2178,7 +2178,7 @@ ul.classes .classesWrap {
 body {
   background-color: #e5e9ec;
   overflow-y: scroll;
-  min-height: 100%;
+  height: 100%;
   -webkit-text-stroke: 0.1px;
 }
 #site_main_container {
