new timer done for take an item

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-preview/top-panel/templates/top-panel.html
@@ -7,7 +7,7 @@
             {{/isTraining}}
             {{^isTraining}}
                 <!--<div class="cpTimer" data-timer="{{timeLeftOrElapsed}}"></div>-->
-                <div id="downUpTimer"></div>
+                <div id="downUpTimer" timerdirection=""></div>
                 {{&getCompletedSummary}}
             {{/isTraining}}
         </div>
