minor fixes css

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -21,7 +21,7 @@
 body{
 	background-color: @body-bg;
 	overflow-y: scroll;
-	min-height: 100%;
+	height: 100%;
 	-webkit-text-stroke: 0.1px;
 }
 
@@ -241,7 +241,7 @@ textarea.error, .select2-choice.error {
 	border:1px solid @color-danger !important;
 }
 
-.page-container, .page-content{
+.page-container{
 	position: static;
 }
 
