--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -94,6 +94,12 @@
 			cursor: default;
 		}
 	}
+
+	.video > *{
+		-webkit-overflow-scrolling: touch;
+		-webkit-transform: translateZ(0px);
+		-webkit-transform: translate3d(0,0,0);
+	}
 }
 
 .contentTime{
