Changes for app-sync view

--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -14,11 +14,10 @@
                             </div>
                           </div>
                         </div>
-                        <!-- div to display last download time-->
                         <div id="lastDownload" class="row">
                           <div class="col-sm-12  m-b-10">
                             <div class="">
-                              <h5 id="lastDownloadTimeStamp" class="m-t-10 bold text-center text-error">
+                              <h5 id="lastDownloadTimeStamp" class="m-t-10 bold text-center text-error">Last downloaded
                               </h5>
                             </div>
                           </div>
