minor css change

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -57,7 +57,7 @@ body{
 	}
 
 	.page-sidebar-wrapper > ul > li{
-		&>a, &> a i, &> a .arrow, &> a .arrow.open:before{
+		&>a, &> a i, &> a .arrow:before, &> a .arrow.open:before{
 			color: @color-white !important;
 			font-size: 16px;
 		}
