Handled event for image not found

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -12,7 +12,7 @@
                 <div class="controls">
                   <div class="input-with-icon">                                       
                     <i class="fa fa-user"></i>
-                    <input type="text" required name="txtusername" id="txtusername" class="form-control" placeholder="Username">                                 
+                    <input type="text" required name="txtusername" id="txtusername" class="form-control input-lg" placeholder="Username">                                 
                   </div>
                 </div>
           </div>
@@ -23,7 +23,7 @@
               <div class="controls">
                 <div class="input-with-icon ">                                       
                   <i class="fa fa-lock"></i>
-                  <input type="password"  required name="txtpassword" id="txtpassword" class="form-control" placeholder="Password">                                 
+                  <input type="password"  required name="txtpassword" id="txtpassword" class="form-control input-lg" placeholder="Password">                                 
                 </div>
               </div>
           </div>
