--- a/HTML/assets/less/textbook.less
+++ b/HTML/assets/less/textbook.less
@@ -30,7 +30,7 @@
       line-height: 38px;
       //background: darken(@body-bg, 10%);
       text-align: right;
-      color: #59514c;
+      // color: #59514c;
       -webkit-border-radius: 3px;
       -moz-border-radius: 3px;
       border-radius: 3px;
