--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/take-class/templates/class-description.html
@@ -1,9 +1,9 @@
 <div class="tiles white grid simple vertical green">
 	<div class="grid-title no-border">
 		<h4 class="">{{showClassLabel}}</h4>
-		<div class="tools">
+		<!-- <div class="tools">
 			<a href="javascript:;" class="collapse"></a>
-		</div>
+		</div> -->
 		</div>
 		<div class="grid-body no-border" style="overflow: hidden; display: block;">
 		<div class="row ">
