--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1482,7 +1482,6 @@ p.mcq-option-text {
   height: 38px;
   line-height: 38px;
   text-align: right;
-  color: #59514c;
   -webkit-border-radius: 3px;
   -moz-border-radius: 3px;
   border-radius: 3px;
@@ -2289,7 +2288,7 @@ body {
 }
 .page-sidebar .page-sidebar-wrapper > ul > li > a,
 .page-sidebar .page-sidebar-wrapper > ul > li > a i,
-.page-sidebar .page-sidebar-wrapper > ul > li > a .arrow,
+.page-sidebar .page-sidebar-wrapper > ul > li > a .arrow:before,
 .page-sidebar .page-sidebar-wrapper > ul > li > a .arrow.open:before {
   color: #ffffff !important;
   font-size: 16px;
@@ -2521,6 +2520,13 @@ ol > li {
 }
 .progress .progress-bar {
   border-radius: 0;
+}
+.table-hover tbody tr:hover > td,
+.table-hover tbody tr:hover > th {
+  background-color: transparent;
+}
+.teacher-app .grid {
+  background-color: transparent !important;
 }
 ::-webkit-input-placeholder {
   color: #cdcdcd;
