--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -2617,3 +2617,100 @@ select:before {
   background: #f3f3f3;
   border: none;
 }
+/*Toggle switch for app login*/
+.onoffswitch {
+  position: relative;
+  width: 120px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+.onoffswitch > * {
+  -webkit-overflow-scrolling: touch;
+  -webkit-transform: translateZ(0px);
+  -webkit-transform: translate3d(0, 0, 0);
+}
+.onoffswitch-checkbox {
+  display: none;
+}
+.onoffswitch-label {
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  border: 0px solid #f3f3f3;
+  border-radius: 0px;
+}
+.onoffswitch-inner {
+  display: block;
+  width: 200%;
+  margin-left: -100%;
+  -moz-transition: margin 0.3s ease-in 0s;
+  -webkit-transition: margin 0.3s ease-in 0s;
+  -o-transition: margin 0.3s ease-in 0s;
+  transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner > span {
+  display: block;
+  float: left;
+  position: relative;
+  width: 50%;
+  height: 30px;
+  padding: 0;
+  line-height: 30px;
+  font-size: 15px;
+  color: white;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.onoffswitch-inner .onoffswitch-active {
+  padding-left: 10px;
+  background-color: #b9c4cc;
+  color: #ffffff;
+}
+.onoffswitch-inner .onoffswitch-inactive {
+  padding-right: 10px;
+  background-color: #b9c4cc;
+  color: #ffffff;
+  text-align: right;
+}
+.onoffswitch-switch {
+  display: block;
+  width: 50px;
+  margin: 0px;
+  text-align: center;
+  border: 0px solid #f3f3f3;
+  border-radius: 0px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+}
+.onoffswitch-active .onoffswitch-switch {
+  background: #0090d9;
+  left: 0;
+}
+.onoffswitch-active .onoffswitch-switch:before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 50px;
+  border-style: solid;
+  border-color: #0090d9 transparent transparent #0090d9;
+  border-width: 15px 12px;
+}
+.onoffswitch-inactive .onoffswitch-switch {
+  background: #aaaaaa;
+  right: 0;
+}
+.onoffswitch-inactive .onoffswitch-switch:before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  right: 50px;
+  border-style: solid;
+  border-color: transparent #aaaaaa #aaaaaa transparent;
+  border-width: 15px 12px;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+  margin-left: 0;
+}
