additional info styles

--- a/HTML/assets/less/quiz.less
+++ b/HTML/assets/less/quiz.less
@@ -205,9 +205,9 @@
 	.sidebarContainer{
 		position: relative;
 	}
-	.qstnInfo{
-		margin-top: 100px;
-	}
+	// .qstnInfo{
+	// 	margin-top: 100px;
+	// }
 }
 
 @media (max-width:1019px){
