--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -1,3 +1,8 @@
+.container-grey{
+	background: @preview-grey;
+	border: 1px solid lighten(@dash-grey, 10%);
+	box-shadow: darken(@preview-grey, 10%) 0 0 0 3px inset;
+}
 
 .hashtags{
 	font-size: 13px;
@@ -116,11 +121,16 @@
 .contentTime, .contentInfo{
 	width: 235px;
 	// background: darken(@preview-grey, 15%);
-	background: @preview-grey;
-	border: 1px solid lighten(@dash-grey, 10%);
-	box-shadow: darken(@preview-grey, 10%) 0 0 0 3px inset;
+	.container-grey;
 	// margin: 0 1.5%;
 	position: absolute;
+}
+
+.qstnInfo{
+	max-width: 760px;
+	margin: auto;
+	margin-bottom: 5px;
+	padding: 10px 10px 10px 20px;
 }
 
 @media (min-width: 1020px) and (max-width:1295px){
@@ -148,6 +158,11 @@
 	}
 	.contentInfo{
 		// top: 175px;
+	}
+	.qstnInfo{
+		margin: 0;
+		margin-bottom: 5px;
+		margin-left: auto;
 	}
 }
 .answrMsg{
