--- a/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/app-sync/templates/appsync.html
@@ -4,7 +4,7 @@
 
                     <div class="row">
 
-                      <div class="col-sm-12">
+                      <div class="col-sm-12 b-b b-grey p-b-10 m-b-5">
                         <h3 class="semi-bold text-center">Data Sync</h3>
 
                         <div id="totalRecords" class="row">
@@ -26,7 +26,7 @@
                         <div class="row">
                           <div class="col-sm-12  m-b-10 m-t-10">
                             <div class="">
-                              <button id="syncStartContinue" type="button" class="btn btn-success h-align-middle"><span id="syncButtonText" class="bold">Start</span></button>
+                              <button id="syncStartContinue" type="button" class="btn btn-success h-align-middle block"><span id="syncButtonText" class="bold">Start</span></button>
                               
                               <h5 id="syncSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
@@ -51,7 +51,7 @@
                         <div class="row">
                           <div class="col-sm-12  m-b-10 m-t-10">
                             <div class="">
-                              <button id="syncMediaStart" type="button" class="btn btn-success h-align-middle"><span id="syncMediaButtonText" class="bold">Start</span></button>
+                              <button id="syncMediaStart" type="button" class="btn btn-success h-align-middle block"><span id="syncMediaButtonText" class="bold">Start</span></button>
                               
                               <h5 id="syncMediaSuccess" class="m-t-5 semi-bold text-center text-success" style="display:none">Success</h5>
                               
