--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -40,9 +40,9 @@
                 <span class="switch-selection"></span>
               </div> -->
 
-              <div class="onoffswitch">
-                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" checked>
-                <label class="onoffswitch-label" for="myonoffswitch">
+              <div class="onoffswitch h-align-middle">
+                <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="onOffSwitch" checked>
+                <label class="onoffswitch-label" for="onOffSwitch">
                     <span class="onoffswitch-inner">
                         <span class="onoffswitch-active"><span class="onoffswitch-switch">Online</span></span>
                         <span class="onoffswitch-inactive"><span class="onoffswitch-switch">Offline</span></span>
